sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:14: error: ';' expected but ')' found.
      var m=getValeur(i))
                        ^